--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@ant-design/icons": "^5.2.5",
     "antd": "^5.8.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
