--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest": "^29.6.4",
     "lint-staged": "^14.0.1",
     "prettier": "3.0.2",
+    "sass": "^1.66.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
