--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
     "antd": "^5.8.4",
+    "i18next": "^23.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0"
   },
