--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "antd": "^5.8.4",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
+    "i18next": "^23.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
