--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
