--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --check 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "preview": "vite preview",
     "prepare": "husky install",
-    "test": "jest"
+    "test": "vitest --watch=false"
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
@@ -27,11 +27,12 @@
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
-    "vite-tsconfig-paths": "^4.2.0"
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest-fetch-mock": "^0.2.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -44,14 +45,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.3",
-    "jest": "^29.6.4",
+    "jsdom": "^22.1.0",
     "lint-staged": "^14.0.1",
     "prettier": "3.0.2",
     "sass": "^1.66.1",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "vitest": "^0.34.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown",
